--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -18,6 +18,11 @@ android {
     }
 }
 
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
+}
+
 repositories {
     flatDir {
         dirs '../libs'
